fix:archivo index modificado

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Ing. Victor Perez Rojas</h1>
+        <h2>Materia:Tecnologias de Internet</h2>
     </body>
 </html>
