fix:archivo index modificado

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Ing. Victor Perez Rojas</h1>
         <h2>Materia:Tecnologias de Internet</h2>
+        <h3>Carrera:Ingenieria en Sistemas</h3>
     </body>
 </html>
